<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/creatortab"
                    android:layout_width="341dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/ContactCreator"
                        android:id="@+id/createTitle"
                        android:layout_weight="0.04"
                        android:allowUndo="false"
                        android:layout_gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgId"
                        android:layout_weight="0.04"
                        android:src="@drawable/default12" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/pName"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.04"
                        android:maxWidth="50dp"
                        android:hint="@string/personName" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/phoneNo"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.04"
                        android:hint="@string/phoneNo" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/emailId"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.04"
                        android:hint="@string/emailId" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:id="@+id/address"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.04"
                        android:hint="@string/address" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addContact"
                        android:id="@+id/submit"
                        android:layout_gravity="right"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/showContactTab"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="All Contacts"
                        android:id="@+id/listTitle"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.04" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:id="@+id/listView"
                        android:layout_weight="33497.63" />
                </LinearLayout>



            </FrameLayout>
        </LinearLayout>
    </TabHost>


</LinearLayout>
